argocd/dev/vote/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: vote
  name: vote
  namespace: votingapp-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: vote
    spec:
      containers:
      - image: dockersamples/examplevotingapp_vote
        name: examplevotingapp-vote-wfh47
        ports:
        - containerPort: 80
        command: [ "python" ]
        args: [ "app.py" ]
        resources: {}
status: {}
