argocd/dev/vote/vote-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route-vote
  namespace: votingapp-dev
spec:
  parentRefs:
    - name: conquer-gw
      namespace: istio-system
  hostnames:
    - vote.conquerproject.io
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: vote
          port: 80
